deployment/02_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-service-deployment
  namespace: development
  labels:
    app: webapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: webapp
  template:
    metadata:
      labels:
        app.kubernetes.io/name: webapp
    spec:
      serviceAccountName: counter-service-account
      containers:
      - name: counter-service
        image: public.ecr.aws/a9k6f9j6/counter-service-pub:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "250m"
            memory: "50Mi"
