deployment/03_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-service
  namespace: development
  labels:
    run: webapp
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  - name: https
    port: 443
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: counter-service
    app.kubernetes.io/name: counter-service
