deployment/04_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: development
  annotations: 
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: '<CERTIFICATE_ARN>'
    alb.ingress.kubernetes.io/load-balancer-name: 'webapp-lb'
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
spec:
  ingressClassName: alb 
  rules:
  - host: awsdjangodeployer.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: counter-service
            port:
              number: 80
